--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ p {
   font-family: 'Alice';
   font-size: 1em;
 }
-
+/*
 header{
     background-image: url('/images/closeup-tapestry.png');
     font-family: 'Playfair Display', sans-serif;
@@ -182,5 +182,5 @@ nav ul li{
     padding: 63%;
     background-color: #432E36;   
     color: #EDBFC6;        
-
 }
+*/
