--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,6 @@ header{
     background-image: url('/images/closeup-tapestry.png');
     font-family: 'Playfair Display', sans-serif;
     color: #260C1A;
-    background-color: #AF8D86;
 }
 
 body{
@@ -98,6 +97,7 @@ nav ul li{
     padding: 25%;
     background-color: #5F4842;   
     color: #FFFFFF;
+	min-height: 0;
 }
 
 .about{
@@ -106,6 +106,7 @@ nav ul li{
     padding: 25%;
     background-color: #432E36;   
     color: #EDBFC6;
+	min-height: 0;
 }
 
 .video-example{
@@ -114,6 +115,7 @@ nav ul li{
     padding: 25%;
     background-color: #5F4842;   
     color: #FFFFFF;
+	min-height: 0;
 }
 
 .upload-a-video{
@@ -122,6 +124,7 @@ nav ul li{
     padding: 25%;
     background-color: #432E36;   
     color: #FFFFFF;
+	min-height: 0;
 }
 
 .pattern-example{
@@ -129,7 +132,8 @@ nav ul li{
     margin: 0 auto;
     padding: 25%;
     background-color: #5F4842;   
-    color: #FFFFFF;    
+    color: #FFFFFF;   
+	min-height: 0;
 }
 
 .pattern-image{
@@ -142,6 +146,7 @@ nav ul li{
     padding: 25%;
     background-color: #5F4842;   
     color: #FFFFFF;    
+	min-height: 0;
 }
 
 .forum-example{
@@ -150,6 +155,7 @@ nav ul li{
     padding: 25%;
     background-color: #5F4842;   
     color: #FFFFFF;    
+	min-height: 0;
 }
 
 .upload-a-post{
@@ -157,7 +163,8 @@ nav ul li{
     margin: 0 auto;
     padding: 25%;
     background-color: #5F4842;   
-    color: #FFFFFF;       
+    color: #FFFFFF;  
+	min-height: 0;
 }
 
 .login{
@@ -166,6 +173,7 @@ nav ul li{
     padding: 25%;
     background-color: #432E36;   
     color: #EDBFC6;    
+	min-height: 0;
 }
 
 .signup{
@@ -174,6 +182,7 @@ nav ul li{
     padding: 25%;
     background-color: #432E36;   
     color: #EDBFC6;    
+	min-height: 0;
 }
 
 .contact{
@@ -181,7 +190,9 @@ nav ul li{
     margin: 0 auto;
     padding: 25%;
     background-color: #432E36;   
-    color: #EDBFC6;        
+    color: #EDBFC6;      
+	min-height: 0;
 }
+
 
 
