--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ nav ul{
 	list-style: none;
 	gap: 275%;
     padding: 175%;
-    background-color: #260C1A;
+    background-image: url('/images/closeup-tapestry.png');
 	max-height: 100%;
 }
 
@@ -178,6 +178,7 @@ nav ul li{
     color: #EDBFC6;      
 	min-height: 0;
 }
+
 
 
 
