--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,8 @@ nav ul li{
 .icon{
 	width: 10%;
 	height: 10%;
+	padding: 5%;
+	border-radius: 100%;
     background-color: #EDBFC6;
 }
 
@@ -183,6 +185,7 @@ nav ul li{
     color: #EDBFC6;      
 	min-height: 0;
 }
+
 
 
 
