--- a/styles.css
+++ b/styles.css
@@ -87,8 +87,7 @@ nav ul li{
 }
 
 .icon{
-	width: 10%;
-	height: 10%;
+	max-height: 10%;
 	padding: 5%;
 	border-radius: 100%;
     background-color: #EDBFC6;
@@ -185,6 +184,7 @@ nav ul li{
     color: #EDBFC6;      
 	min-height: 0;
 }
+
 
 
 
