--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,7 @@ nav ul li{
   font-size: 1.15em;
 }
 
-.cloth-moth{
+.Cloth-moth{
 	padding: 5%;
 	background-color: #EDBFC6;
 	border-radius: 25%
@@ -189,6 +189,7 @@ nav ul li{
     color: #EDBFC6;      
 	min-height: 0;
 }
+
 
 
 
