--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ nav ul li{
 .Cloth-moth{
 	display: flex;
 	padding: 2.5%;
+	color: #260C1A;
 	
 }
 
@@ -208,6 +209,7 @@ nav ul li{
 	min-height: 0;
 	border-radius:10%;
 }
+
 
 
 
