--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,12 @@ a:active {
 
 .sample{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #5F4842;   
@@ -131,6 +137,12 @@ a:active {
 
 .About{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #432E36;   
@@ -141,6 +153,12 @@ a:active {
 
 .video-example{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #5F4842;   
@@ -151,6 +169,12 @@ a:active {
 
 .upload-a-video{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #432E36;   
@@ -161,6 +185,12 @@ a:active {
 
 .pattern-example{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #5F4842;   
@@ -175,6 +205,12 @@ a:active {
 
 .upload-a-pattern{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #5F4842;   
@@ -185,6 +221,12 @@ a:active {
 
 .forum-example{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #5F4842;   
@@ -195,6 +237,12 @@ a:active {
 
 .upload-a-post{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #5F4842;   
@@ -205,6 +253,12 @@ a:active {
 
 .login{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #432E36;   
@@ -215,6 +269,12 @@ a:active {
 
 .signup{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #432E36;   
@@ -225,6 +285,12 @@ a:active {
 
 .contact{
 	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: baseline;
+	align-content: flex-start;
+	gap: 1%;
     margin: 0 auto;
     padding: 10%;
     background-color: #432E36;   
@@ -232,6 +298,7 @@ a:active {
 	min-height: 0;
 	border-radius:20%;
 }
+
 
 
 
