--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ h5 {
   font-weight: true;
   line-height: 1.15;
   padding: 10%;
+  display: block;
 }
 
 h1,
@@ -298,6 +299,7 @@ a:active {
 	min-height: 0;
 	border-radius:20%;
 }
+
 
 
 
