--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ h5 {
   font-weight: true;
   line-height: 1.15;
   padding: 10%;
-  display: block;
+  margin: 20%;
 }
 
 h1,
@@ -50,7 +50,8 @@ html {font-size: 1em;}
 p {
   font-family: 'Alice';
   font-size: 1em;
-	padding: 1%;
+	padding: 10%;
+	margin: 15%;
 }
 
 header{
@@ -299,6 +300,7 @@ a:active {
 	min-height: 0;
 	border-radius:20%;
 }
+
 
 
 
