--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,8 @@ h5 {
   line-height: 1.15;
   padding: 10%;
   margin: 20%;
+  background-color: #AF8D86;
+  border-radius: 35%;
 }
 
 h1,
@@ -300,6 +302,7 @@ a:active {
 	min-height: 0;
 	border-radius:20%;
 }
+
 
 
 
