--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,7 @@ h5 {
   font-weight: true;
   line-height: 1.15;
   padding: 10%;
-  background-color: #AF8D86;
-  border-radius: 75%;
+
 }
 
 h1,
@@ -35,12 +34,17 @@ h1,
   font-weight: 400;
   margin-top: 0;
   font-size: 3.05em;
+  background-color: #AF8D86;
+  border-radius: 95%;
+  overflow: hidden;
 }
 
 h2,
 .text-size-h2 { 
     font-family: 'Playfair Display', sans-serif;
     font-size: 2.44em;
+  background-color: #AF8D86;
+  border-radius: 75%;
  }
 
 h3,
@@ -301,6 +305,7 @@ a:active {
 	min-height: 0;
 	border-radius:20%;
 }
+
 
 
 
