--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,8 @@ h5 {
   font-weight: true;
   line-height: 1.15;
   padding: 10%;
+  background-color: #AF8D86;
+  border-radius: 75%;
 
 }
 
@@ -34,13 +36,17 @@ h1,
   font-weight: 400;
   margin-top: 0;
   font-size: 3.05em;
+  background-color: #AF8D86;
+  border-radius: 95%;
+  overflow: hidden;
+}
 
 h2,
 .text-size-h2 { 
     font-family: 'Playfair Display', sans-serif;
     font-size: 2.44em;
   background-color: #AF8D86;
-  border-radius: 85%;
+  border-radius: 75%;
  }
 
 h3,
@@ -78,7 +84,7 @@ nav ul{
 	gap: 1%;
     padding: 1%;
 	max-height: 30%;
-	
+
 }
 
 nav ul li{
@@ -301,6 +307,8 @@ a:active {
 	min-height: 0;
 	border-radius:20%;
 }
+
+
 
 
 
