--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ h2,
     font-size: 2.44em;
   background-color: #AF8D86;
   border-radius: 85%;
+ text-align: center;
  }
 
 h3,
@@ -301,6 +302,7 @@ a:active {
 	min-height: 0;
 	border-radius:20%;
 }
+
 
 
 
