--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ h2,
     font-size: 2.44em;
   background-color: #AF8D86;
  text-align: center;
+border-radius: 50%;
  }
 
 h3,
@@ -300,6 +301,7 @@ a:active {
 	min-height: 0;
 	border-radius:20%;
 }
+
 
 
 
